#ifndef CREATEDATABASECOMMAND_H
#define CREATEDATABASECOMMAND_H

#include "command/ICommand.hpp"

/**
 * Command to create a new database.
 */
class CreateDatabaseCommand : public ICommand {};

#endif
