@startuml
package command {
  interface ICommand {
    +~ICommand()
  }
  class NullCommand implements ICommand
  class CreateDatabaseCommand implements ICommand
}

package input {
  interface IInput {
    +~IInput()
    +std::unique_ptr<ICommand> getCommand()
  }
  package cli {
    class CommandLineArgument {
      +CommandLineArgument(std::string argument)
      +<<friend>> bool operator==(...)
      -std::string _argument
    }
    class CommandLineInput implements IInput {
      +CommandLineInput(std::vector<std::string> arguments)
      +std::unique_ptr<ICommand> getCommand()
      -{static} const CommandLineArgument CREATE;
      -CommandLineArgument _argument;
    }
    CommandLineInput o-- CommandLineArgument
  }
}

IInput --> ICommand : creates
@enduml
